--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "vite preview --host"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0"
   },
