--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "@vitest/coverage-c8": "^0.28.2",
     "jsdom": "^21.1.0",
+    "msw": "^1.0.0",
     "vite": "^4.0.0",
     "vitest": "^0.28.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
