--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
     "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.0.0"
+    "@vitest/coverage-c8": "^0.28.3",
+    "jsdom": "^21.1.0",
+    "msw": "^1.0.0",
+    "vite": "^4.0.0",
+    "vitest": "^0.28.2"
   }
 }
